# ocr-image-to-text

./: CMakeLists.txt  README.md  ocr_image_to_text.cpp
example/: ocr_image_to_text
